<resources>
    <string name="app_name">Cristina Lozano Beauty</string>
    <string name="nav_bar_home">Inicio</string>
    <string name="nav_bar_client">Clientas</string>
    <string name="nav_bar_message_reminder">Recordatorios</string>
    <string name="accept">Aceptar</string>
    <string name="cancel">Cancelar</string>
    <string name="error">Error</string>
    <string name="alert">Alerta</string>
    <string name="information">Información</string>
    <string name="yes">Sí</string>
    <string name="no">No</string>

    <!--Home-->
    <string name="home_events">Eventos</string>

    <!--Client list-->
    <string name="client_list_title">Clientas</string>
    <string name="client_list_add_client">Añadir clienta</string>
    <string name="client_list_error_list">No se han podido cargar las clientas</string>
    <string name="client_list_error_delete">No se ha podido eliminar la clienta</string>
    <string name="client_list_search">Buscar por nombre o teléfono</string>
    <string name="client_list_hide_disabled">Ocultar clientas archivadas</string>

    <!--Client list dialog-->
    <string name="dialog_delete_client_title">Eliminar clienta</string>
    <string name="dialog_delete_client_message">¿Quieres eliminar la clienta %s?</string>

    <!--Client form-->
    <string name="client_form_title">Nueva clienta</string>
    <string name="client_form_name">Nombre</string>
    <string name="client_form_last_name">Apellidos</string>
    <string name="client_form_phone">Teléfono</string>
    <string name="client_form_prefix_phone">+34</string>
    <string name="client_form_email">Email</string>
    <string name="client_form_birthday">Fecha de nacimiento</string>
    <string name="client_form_profession">Profesión</string>
    <string name="client_form_town">Población</string>
    <string name="client_form_nail_disorder">Alteraciones de las uñas</string>
    <string name="client_form_skin_disorder">Alteraciones de la piel</string>
    <string name="client_form_service">Servicios</string>
    <string name="client_form_allergy">Alergias</string>
    <string name="client_form_others">Otros</string>
    <string name="client_form_frequency">Frecuencia de retoque (nº semanas)</string>
    <string name="client_form_action_save">Guardar</string>
    <string name="client_form_select_nail_disorder">Selecciona una alteración en las uñas</string>
    <string name="client_form_select_skin_disorder">Selecciona una alteración en la piel</string>
    <string name="client_form_select_service">Selecciona un servicio a realizar</string>
    <string name="client_form_has_diabetes">¿Tiene diabetes?</string>
    <string name="client_form_has_poor_coagulation">¿Tiene mala coagulación?</string>
    <string name="client_form_accept_terms">He leído y acepto los <b>términos y condiciones</b></string>
    <string name="terms_and_conditions">términos y condiciones</string>
    <string name="client_form_save_changes_title">Guardar cambios</string>
    <string name="client_form_save_changes">¿Quieres guardar los cambios antes de salir?</string>

    <!--Client form error-->
    <string name="client_form_error_phone">Introduce un teléfono correcto</string>
    <string name="client_form_error_mandatory_fields">Rellena todos los campos obligatorios antes de continuar</string>
    <string name="client_form_error_accept_terms">Debes aceptar los términos y condiciones antes de continuar</string>
    <string name="client_form_error_create">No se ha podido registrar la clienta</string>

    <!--Client detail-->
    <string name="client_detail_title">Clienta</string>
    <string name="client_detail_action_disabled">Archivar clienta</string>
    <string name="client_detail_sign_minor_consent">Firmar documento de consentimiento de menores</string>
    <string name="client_detail_open_minor_consent">Abrir documento de consentimiento de menores</string>
    <string name="client_detail_delete_minor_consent_title">Eliminar documento</string>
    <string name="client_detail_delete_minor_consent">¿Quieres eliminar el documento de consentimiento de menores?</string>
    <string name="client_detail_error_sign_minor_consent">Debes firmar el documento de consentimiento de menores</string>
    <string name="client_detail_error_find">No se ha podido cargar los datos de la clienta</string>
    <string name="client_detail_error_update">No se ha podido actualizar los datos de la clienta</string>

    <!--Pdf sign-->
    <string name="pdf_sign_title">Documento de consentimiento</string>
    <string name="pdf_sign_client">Clienta</string>
    <string name="pdf_sign_date">Fecha</string>
    <string name="pdf_sign_signature">Firma</string>
    <string name="pdf_sign_action_clear">Limpiar</string>
    <string name="pdf_sign_action_sign">Firmar</string>
    <string name="pdf_sign_mandatory_signature">La firma es obligatoria</string>
    <string name="pdf_sign_error_save_document">No se ha podido guardar el documento</string>
    <string name="pdf_sign_error_delete_document">No se ha podido borrar el documento</string>
    <string name="pdf_sign_minor_section_title">Datos del menor</string>
    <string name="pdf_sign_minor_name">Nombre</string>
    <string name="pdf_sign_minor_birthday">Fecha de nacimiento</string>
    <string name="pdf_sign_minor_phone">Teléfono</string>
    <string name="pdf_sign_minor_email">Email</string>
    <string name="pdf_sign_minor_town">Localidad</string>
    <string name="pdf_sign_authorization_text">Por la presente, en calidad de tutor legal, autorizo expresamente la realización de tratamientos de manicura y/o pedicura al menor indicado.\nDeclaro haber sido debidamente informado/a sobre las técnicas, productos a utilizar y posibles contraindicaciones del servicio, asumiendo la responsabilidad y eximiendo al centro de cualquier reacción adversa derivada del mismo.</string>
    <string name="pdf_sign_tutor_dialog_title">Datos del tutor legal</string>
    <string name="pdf_sign_tutor_fullname">Nombre y apellidos</string>
    <string name="pdf_sign_tutor_nif">DNI</string>
    <string name="pdf_sign_tutor_relation">Relación con el menor</string>
    <string name="pdf_sign_tutor_mandatory_fields">Todos los campos son obligatorios</string>
    <string name="pdf_sign_tutor_error_nif">El DNI introducido no es válido</string>
    <string name="pdf_sign_tutor_select_relation">Selecciona la relación con el menor</string>
    <string-array name="tutor_relations">
        <item>Padre</item>
        <item>Madre</item>
        <item>Tutor legal</item>
    </string-array>

    <!--Signature pad-->
    <string name="signature_pad_title">La firma es obligatoria</string>

    <!--Appointment history list-->
    <string name="appointment_history_list_title">Historial de citas</string>
    <string name="appointment_history_list_pending">Citas pendientes</string>
    <string name="appointment_history_list_pending_empty">No hay citas pendientes</string>
    <string name="appointment_history_list_made">Citas realizadas</string>
    <string name="appointment_history_list_made_empty">No hay citas realizadas</string>
    <string name="appointment_history_list_error_list">No se han podido cargar las citas</string>
    <string name="appointment_history_list_error_update">No se ha podido modificar la cita</string>
    <string name="appointment_history_list_error_delete">No se ha podido eliminar la cita</string>

    <!--Appointment history list dialog-->
    <string name="dialog_update_attendance_appointment_title">¿Quieres actualizar la asistencia de la cita?</string>
    <string name="dialog_delete_appointment_title">¿Quieres eliminar la cita?</string>

    <!--Color history list-->
    <string name="color_history_list_title">Historial de colores</string>
    <string name="color_history_list_add_color">Añadir color</string>
    <string name="color_history_list_error_list">No se han podido cargar los colores</string>
    <string name="color_history_list_error_delete">No se ha podido eliminar el color</string>

    <!--Color history list dialog-->
    <string name="dialog_delete_color_title">¿Quieres eliminar el color?</string>

    <!--Color history form-->
    <string name="color_history_form_title">Nuevo color</string>
    <string name="color_history_form_brand">Marca</string>
    <string name="color_history_form_select_nail_polish_brand">Selecciona una marca de esmalte de uñas</string>
    <string name="color_history_form_reference">Referencia</string>
    <string name="color_history_form_date">Fecha</string>
    <string name="color_history_form_action_save">Guardar</string>

    <!--Color history form error-->
    <string name="color_history_form_error_mandatory_fields">Rellena todos los campos obligatorios antes de continuar</string>
    <string name="color_history_form_error_create">No se ha podido registrar el color</string>
    <string name="color_history_detail_error_find">No se ha podido cargar los datos del color</string>

    <!--Color history detail-->
    <string name="color_history_detail_title">Color</string>

    <!--Calendar event-->
    <string name="dialog_calendar_event_title">Nueva cita</string>
    <string name="dialog_calendar_event_action_save">Guardar</string>
    <string name="dialog_calendar_event_delete_message">Quieres eliminar la cita?</string>
    <string name="dialog_calendar_event_select_client">Selecciona una clienta</string>
    <string name="dialog_calendar_event_select_service">Selecciona un servicio</string>
    <string name="dialog_calendar_event_clients">Clienta</string>
    <string name="dialog_calendar_event_service">Servicio</string>
    <string name="dialog_calendar_hint_start_time_event">Hora inicio (HH:mm)</string>
    <string name="dialog_calendar_hint_end_time_event">Hora fin (HH:mm)</string>

    <!--Event form error-->
    <string name="calendar_event_form_error_time">Indica las horas de la cita correctamente</string>
    <string name="calendar_event_form_error_create">No se ha podido registrar la cita</string>
    <string name="calendar_event_form_error_update">No se ha podido modificar la cita</string>
    <string name="calendar_event_form_error_delete">No se ha podido eliminar la cita</string>

    <!--Message reminder-->
    <string name="message_reminder_label_birthday">Cumpleaños</string>
    <string name="message_reminder_action_send">Enviar</string>
    <string name="message_reminder_select_client">Selecciona una clienta</string>
    <string name="message_reminder_appointment_not_found">No hay ninguna cita pendiente relacionada con esta clienta</string>
    <string name="message_reminder_sending_reminder_error">Error al enviar el recordatorio</string>
    <string name="message_reminder_sending_birthday_greeting_error">Error al enviar la felicitación de cumpleaños</string>
    <string name="message_reminder_appointment_message">Hola %s!\nRecordatorio de tu cita con Cristina Lozano Beauty en estética e imatge: día %s a las %s.\n\nConsulta o cambia tu cita escribiéndonos a este Whatsapp \uD83D\uDE03</string>
    <string name="message_reminder_birthday_message">Holi %s!\nQuería felicitarte por tu cumpleaños\n¡Muchas felicidades!</string>

</resources>