<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding">

    <!--Scrollview-->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!--Form-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!--Name-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/et_name"
                style="@style/ClientForm"
                android:hint="@string/client_form_name"
                app:boxStrokeColor="@color/gold"
                app:hintTextColor="@color/gold">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_name_text"
                    style="@style/ClientFormText" />

            </com.google.android.material.textfield.TextInputLayout>

            <!--Last name-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/et_last_name"
                style="@style/ClientForm"
                android:hint="@string/client_form_last_name"
                app:boxStrokeColor="@color/gold"
                app:hintTextColor="@color/gold">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_last_name_text"
                    style="@style/ClientFormText" />

            </com.google.android.material.textfield.TextInputLayout>

            <!--Phone-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/et_phone"
                style="@style/ClientForm"
                android:hint="@string/client_form_phone"
                app:boxStrokeColor="@color/gold"
                app:hintTextColor="@color/gold">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_phone_text"
                    style="@style/ClientFormText"
                    android:inputType="phone"
                    android:maxLength="12" />

            </com.google.android.material.textfield.TextInputLayout>

            <!--Email-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/et_email"
                style="@style/ClientForm"
                android:hint="@string/client_form_email"
                app:boxStrokeColor="@color/gold"
                app:hintTextColor="@color/gold">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_email_text"
                    style="@style/ClientFormText"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>

            <!--Birthday-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/et_birthday"
                style="@style/ClientForm"
                android:hint="@string/client_form_birthday"
                app:boxStrokeColor="@color/gold"
                app:hintTextColor="@color/gold">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_birthday_text"
                    style="@style/ClientFormText"
                    android:focusable="false"
                    android:inputType="none" />

            </com.google.android.material.textfield.TextInputLayout>

            <!--Profession-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/et_profession"
                style="@style/ClientForm"
                android:hint="@string/client_form_profession"
                app:boxStrokeColor="@color/gold"
                app:hintTextColor="@color/gold">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_profession_text"
                    style="@style/ClientFormText" />

            </com.google.android.material.textfield.TextInputLayout>

            <!--Town-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/et_town"
                style="@style/ClientForm"
                android:hint="@string/client_form_town"
                app:boxStrokeColor="@color/gold"
                app:hintTextColor="@color/gold">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_town_text"
                    style="@style/ClientFormText" />

            </com.google.android.material.textfield.TextInputLayout>

            <!--Nail disorder-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/et_nail_disorder"
                style="@style/ClientForm"
                android:hint="@string/client_form_nail_disorder"
                app:boxStrokeColor="@color/gold"
                app:hintTextColor="@color/gold">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_nail_disorder_text"
                    style="@style/ClientFormText"
                    android:focusable="false"
                    android:inputType="none" />

            </com.google.android.material.textfield.TextInputLayout>

            <!--Skin disorder-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/et_skin_disorder"
                style="@style/ClientForm"
                android:hint="@string/client_form_skin_disorder"
                app:boxStrokeColor="@color/gold"
                app:hintTextColor="@color/gold">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_skinDisorder_text"
                    style="@style/ClientFormText"
                    android:focusable="false"
                    android:inputType="none" />

            </com.google.android.material.textfield.TextInputLayout>

            <!--Service-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/et_service"
                style="@style/ClientForm"
                android:hint="@string/client_form_service"
                app:boxStrokeColor="@color/gold"
                app:hintTextColor="@color/gold">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_service_text"
                    style="@style/ClientFormText"
                    android:focusable="false"
                    android:inputType="none" />

            </com.google.android.material.textfield.TextInputLayout>

            <!--Allergy-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/et_allergy"
                style="@style/ClientForm"
                android:hint="@string/client_form_allergy"
                app:boxStrokeColor="@color/gold"
                app:hintTextColor="@color/gold">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_allergy_text"
                    style="@style/ClientFormText"
                    android:inputType="textMultiLine" />

            </com.google.android.material.textfield.TextInputLayout>

            <!--Others-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/et_others"
                style="@style/ClientForm"
                android:hint="@string/client_form_others"
                app:boxStrokeColor="@color/gold"
                app:hintTextColor="@color/gold">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_others_text"
                    style="@style/ClientFormText"
                    android:inputType="textMultiLine" />

            </com.google.android.material.textfield.TextInputLayout>

            <!--Diabetes-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/client_form_has_diabetes"
                    android:textSize="@dimen/textSize" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioGroup
                        android:id="@+id/rg_has_diabetes"
                        style="@style/ClientFormRadioGroup">

                        <RadioButton
                            android:id="@+id/rb_diabetes_yes"
                            style="@style/ClientFormRadioButton"
                            android:text="@string/yes"
                            app:buttonTint="@color/gold" />

                        <RadioButton
                            android:id="@+id/rb_diabetes_no"
                            style="@style/ClientFormRadioButton"
                            android:layout_marginStart="@dimen/rbMargin"
                            android:text="@string/no"
                            app:buttonTint="@color/gold" />
                    </RadioGroup>

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/ic_palette_colors"
                        app:tint="@color/gold" />

                </LinearLayout>

            </LinearLayout>

            <!--Poor coagulation-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="4dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/client_form_has_poor_coagulation"
                    android:textSize="@dimen/textSize" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                <RadioGroup
                    android:id="@+id/rg_has_poor_coagulation"
                    style="@style/ClientFormRadioGroup">

                    <RadioButton
                        android:id="@+id/rb_poor_coagulation_yes"
                        style="@style/ClientFormRadioButton"
                        android:text="@string/yes"
                        app:buttonTint="@color/gold" />

                    <RadioButton
                        android:id="@+id/rb_poor_coagulation_no"
                        style="@style/ClientFormRadioButton"
                        android:layout_marginStart="@dimen/rbMargin"
                        android:text="@string/no"
                        app:buttonTint="@color/gold" />
                </RadioGroup>

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/ic_events"
                    app:tint="@color/gold" />

                </LinearLayout>

            </LinearLayout>

            <!--Button save-->
            <Button
                android:id="@+id/btn_save"
                style="@style/Button"
                android:layout_marginVertical="@dimen/margin"
                android:text="@string/client_form_action_save"
                app:backgroundTint="@color/gold" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>